--- a/src/app/views/events/events.component.html
+++ b/src/app/views/events/events.component.html
@@ -31,9 +31,9 @@
                                 Event Description is required.</div>
                         </div>
                     </div>
-                    <div class="form-group col-sm-5">
-                        <label>Event Started In : </label>
-                        <div>
+                    <div class="form-group row">
+                        <label class="col-sm-5">Event Started In : </label>
+                        <div class="col-sm-5">
                             <input type="text" #dp="bsDatepicker" class="form-control" [minDate]="minStartDate"
                                 bsDatepicker [(bsValue)]="startValue" formControlName="starDateTime"
                                 [ngClass]="{'is-invalid': submitted && eventForm.controls.starDateTime.errors, 'is-valid': submitted && !eventForm.controls.starDateTime.errors}">
@@ -44,9 +44,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="form-group col-sm-5">
-                        <label>Event Ended In : </label>
-                        <div>
+                    <div class="form-group row">
+                        <label class="col-sm-5">Event Ended In : </label>
+                        <div class="col-sm-5">
                             <input type="text" #dp="bsDatepicker" class="form-control" [minDate]="minEndDate"
                                 bsDatepicker [(bsValue)]="endValue" formControlName="endDateTime"
                                 [ngClass]="{'is-invalid': submitted && eventForm.controls.endDateTime.errors, 'is-valid': submitted && !eventForm.controls.endDateTime.errors}">
