--- a/src/app/views/company/company.component.html
+++ b/src/app/views/company/company.component.html
@@ -1,4 +1,158 @@
-<div class="animated fadeIn"
+<div bsModal #modal="bs-modal" class="modal right fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-primary" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">{{modalTitle}}</h4>
+        <button type="button" class="close" (click)="hide()" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <form class="modal-body" [formGroup]="companyForm" (ngSubmit)="addCompany()">
+        <div class="form-group">
+
+          <label for="companyName">Company name:</label>
+          <input type="text" class="form-control" id="companyName" placeholder="Enter your company name"
+            formControlName="companyName"
+            [ngClass]="{'is-invalid': submitted && companyForm.controls.companyName.errors, 'is-valid': submitted && !companyForm.controls.companyName.errors}">
+          <div class="invalid-feedback d-block">
+            <div *ngIf="submitted && companyForm.controls.companyName.hasError('required')">Company name is required.
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+
+          <label for="companyDescription">Company description :</label>
+          <textarea class="form-control" row="40" id="companyDescription"
+            placeholder="Enter your Company description here" formControlName="companyDescription"
+            [ngClass]="{'is-invalid': submitted && companyForm.controls.companyDescription.errors, 'is-valid': submitted && !companyForm.controls.companyDescription.errors}"></textarea>
+          <div class="invalid-feedback d-block">
+            <div *ngIf="submitted && companyForm.controls.companyDescription.hasError('required')">Company description
+              is required.</div>
+            <div *ngIf="submitted && companyForm.controls.companyDescription.hasError('minlength')">Company description
+              is invalid format > 8.</div>
+
+          </div>
+        </div>
+        <div class="form-group">
+
+          <label for="email">E-mail</label>
+          <input type="email" id="email" name="email" class="form-control" placeholder="Enter e-mail.."
+            autocomplete="email" formControlName="email"
+            [ngClass]="{'is-invalid': submitted && companyForm.controls.email.errors, 'is-valid': submitted && !companyForm.controls.email.errors}">
+          <div class="invalid-feedback d-block" *ngIf="submitted && companyForm.controls.email.hasError('required')">
+            E-mail is required.
+          </div>
+          <div class="invalid-feedback d-block" *ngIf="submitted && companyForm.controls.email.hasError('email')">
+            Invalid e-mail.
+          </div>
+
+        </div>
+        <div class="form-group">
+
+          <label for=" password"> Password</label>
+          <input type=" password" id=" password" name=" password" class="form-control" placeholder="Enter  password.."
+            formControlName="password"
+            [ngClass]="{'is-invalid': submitted && companyForm.controls.password.errors, 'is-valid': submitted && !companyForm.controls.password.errors}">
+          <div class="invalid-feedback d-block" *ngIf="submitted && companyForm.controls.password.hasError('required')">
+            Passoword is required.
+
+          </div>
+          <div class="invalid-feedback d-block"
+            *ngIf="submitted && companyForm.controls.password.hasError('minlength')">
+            Passoword is required minimum 8 char.
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="role">Select Role</label>
+          <div class="col-md-9">
+            <select id="role" name="role" class="form-control" formControlName="role"
+              [ngClass]="{'is-invalid': submitted && companyForm.controls.role.errors, 'is-valid': submitted && !companyForm.controls.role.errors}">
+              <option value="super-admin">Super Admin</option>
+              <option value="Admin" selected>Admin</option>
+            </select>
+            <div class="invalid-feedback d-block" *ngIf="submitted && companyForm.controls.role.hasError('required')">
+              Role is required.
+            </div>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="uploadPhoto">File input</label>
+          <div class="col-md-9">
+            <input type="file">
+
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" (click)="hide()">Close</button>
+          <button type="button" class="btn btn-primary" (click)="updateCompany()" *ngIf="showUpdateButton">Save
+            changes</button>
+          <button type="submit" class="btn btn-primary" *ngIf="!showUpdateButton">Save </button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+<div class="animated fadeIn">
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="card">
+        <div class="card-header">
+          <strong>Company</strong>
+          <small>Amalia Entertaiment & Events</small>
+        </div>
+        <div class="card-body">
+          <div class="offset-1 my-3 row">
+            <div class="col-12">
+              <button class="btn btn-primary col-1.5 float-right" data-toggle="modal" (click)="showAdd()"><i
+                  class="fa fa-plus"></i> Add company</button>
+              <!-- <input type="search" class="form-control col-3" placeholder="Search product by name"  [(ngModel)]="searchText"> -->
+            </div>
+          </div>
+          <table class="table table-striped table-hover">
+            <thead>
+              <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Name</th>
+                <th scope="col">Description</th>
+                <th scope="col">Email</th>
+                <th scope="col">Role</th>
+                <th scope="col">Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="" *ngFor="let company of company ; let i=index">
+                <td>{{i+1}}</td>
+                <td>{{ company.companyName }}</td>
+                <td>{{ company.companyDescription }}</td>
+                <td>{{ company.email }}</td>
+                <td>{{ company.role }}</td>
+                <td>
+                  <button type="button" class="btn btn-warning" data-toggle="modal" (click)="showUpdate(company._id)" >
+                    <i class="fa fa-edit"></i> Update
+                  </button>
+                  <button type="button" class="btn btn-danger text-dark" (click)='deletecompany(company._id)'><i
+                      class="fa fa-trash"></i></button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <!--/.row-->
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+<!-- <div class="animated fadeIn"
   style="background-image: url('assets/img/Background-image/best-Event-Flyer-Templates.jpeg')">
   <div class="row mt-5">
     <div class="offset-1 col-11">
@@ -35,12 +189,13 @@
             <td>
               <button class="btn btn-info" [routerLink]="['/companies/update-company',company._id]"> <i
                   class="fas fa-pen"></i> Update</button>
-              <button class="btn btn-danger ml-1" (click)="deletecompany(company._id)"> <i class="cui-delete icons font"></i> Delete</button>
+              <button class="btn btn-danger ml-1" (click)="deletecompany(company._id)"> <i
+                  class="cui-delete icons font"></i> Delete</button>
             </td>
           </tr>
         </tbody>
       </table>
-      <!-- <p>{{ currentDate | date:'fullDate' }}</p> -->
+
     </div>
   </div>
-</div>
+</div> -->
