--- a/src/app/views/company/company.component.html
+++ b/src/app/views/company/company.component.html
@@ -1,7 +1,7 @@
 <div bsModal #modal="bs-modal" class="modal right fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true">
   <div class="modal-dialog modal-primary" role="document">
-    <div class="modal-content">
+    <div class="modal-content" style="background:rgba(255, 255, 255, 0.5);">
       <div class="modal-header">
         <h4 class="modal-title">{{modalTitle}}</h4>
         <button type="button" class="close" (click)="hide()" aria-label="Close">
@@ -50,14 +50,13 @@
         </div>
         <div class="form-group">
 
-          <label for=" password"> Password</label>
-          <input type=" password" id=" password" name=" password" class="form-control" placeholder="Enter  password.."
+          <label for="password"  *ngIf="hideInputPassword"> Password</label>
+          <input type="password" *ngIf="hideInputPassword" id="password" name="password" class="form-control" placeholder="Enter  password.."
             formControlName="password"
             [ngClass]="{'is-invalid': submitted && companyForm.controls.password.errors, 'is-valid': submitted && !companyForm.controls.password.errors}">
           <div class="invalid-feedback d-block" *ngIf="submitted && companyForm.controls.password.hasError('required')">
             Passoword is required.
-
-          </div>
+         </div>
           <div class="invalid-feedback d-block"
             *ngIf="submitted && companyForm.controls.password.hasError('minlength')">
             Passoword is required minimum 8 char.
@@ -77,9 +76,9 @@
           </div>
         </div>
         <div class="form-group row">
-          <label for="uploadPhoto">File input</label>
+          <label for="uploadPhoto">Upload your compnay logo</label>
           <div class="col-md-9">
-            <input type="file">
+            <input type="file"(change)="upload($event)">
 
           </div>
         </div>
@@ -93,11 +92,12 @@
     </div>
   </div>
 </div>
+<main style="background-image: url('assets/img/Background-image/best-Event-Flyer-Templates.jpeg')">
 <div class="animated fadeIn">
   <div class="row">
     <div class="col-sm-12">
-      <div class="card">
-        <div class="card-header">
+      <div class="card" style="background:rgba(255, 255, 255, 0.37);">
+        <div class="card-header" style="background:rgba(255, 255, 255, 0.281);">
           <strong>Company</strong>
           <small>Amalia Entertaiment & Events</small>
         </div>
@@ -109,7 +109,7 @@
               <!-- <input type="search" class="form-control col-3" placeholder="Search product by name"  [(ngModel)]="searchText"> -->
             </div>
           </div>
-          <table class="table table-striped table-hover">
+          <table class="table table-striped table-hover" style="color: white" >
             <thead>
               <tr>
                 <th scope="col">ID</th>
@@ -143,6 +143,7 @@
     </div>
   </div>
 </div>
+</main>
 
 
 
