--- a/src/app/home/events/event-info/event-info.component.html
+++ b/src/app/home/events/event-info/event-info.component.html
@@ -23,7 +23,7 @@
             </div>
             <div class="col-4"></div>
             <div class="col-4 float-right">
-                <button class="btn btn-success col-12" [routerLink]="['reservation']">Reservation</button>
+                <button class="btn btn-success col-12" [routerLink]="['/home/events/reservation']">Reservation</button>
             </div>
             
         </div>
