--- a/src/app/home/events/reservation/reservation.component.html
+++ b/src/app/home/events/reservation/reservation.component.html
@@ -1,4 +1,3 @@
-
 <div class="Reservation">
     <div class="animated fadeIn">
         <div class="row">
@@ -91,15 +90,12 @@
                         <div class="row">
                             <fieldset class="form-group">
                                 <h3>Contact information</h3>
-
                                 <div class="input-group">
-                                    <form class="modal-body">
+                                    <form class="modal-body" [formGroup]="reservationForm">
                                         <div class="form-group">
-
                                             <label for="firstName"> First name:</label>
                                             <input type="text" class="form-control" id="Name"
                                                 placeholder="Enter your name">
-
                                             <div class="invalid-feedback d-block">
                                                 <div
                                                     *ngIf="submitted && reservationForm.controls.firstName.hasError('required')">
@@ -109,7 +105,6 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-
                                             <label for="lastName"> last name:</label>
                                             <input type="text" class="form-control" id="Name"
                                                 placeholder="Enter your last name" formControlName="lastName">
@@ -121,7 +116,6 @@
                                                 </div>
                                             </div>
                                         </div>
-
                                         <div class="form-group">
                                             <label for="email">E-mail</label>
                                             <input type="email" id="email" name="email" class="form-control"
@@ -141,15 +135,17 @@
                                                 <h3>Payment method</h3>
                                                 <div class="col-md-9 col-form-label">
                                                     <div class="form-check form-check-inline mr-1" id="inline-radios">
-                                                        <input class="form-check-input" type="radio" name="inline-radios" id="inlineRadio1" value="option1">
+                                                        <input class="form-check-input" type="radio"
+                                                            name="inline-radios" id="inlineRadio1" value="option1">
                                                         <label class="form-check-label" for="inlineRadio1">Free</label>
-                                                      </div>
-                                                      <div class="form-check form-check-inline mr-1">
-                                                        <input class="form-check-input" type="radio" name="inline-radios" id="inlineRadio2" value="option2">
-                                                        <label class="form-check-label" for="inlineRadio2">Payed</label>
-                                                      </div>
                                                     </div>
-                                                      <div class="col-md-9 col-form-label">
+                                                    <div class="form-check form-check-inline mr-1">
+                                                        <input class="form-check-input" type="radio"
+                                                            name="inline-radios" id="inlineRadio2" value="option2">
+                                                        <label class="form-check-label" for="inlineRadio2">Payed</label>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-9 col-form-label">
                                                     <div class="form-check form-check-inline mr-1" id="inline-radios">
                                                         <input class="form-check-input" type="radio"
                                                             name="inline-radios" id="inlineRadio1" value="option1">
@@ -162,8 +158,6 @@
                                                         <label class="form-check-label" for="inlineRadio2">Paypal <i
                                                                 class="fa fa-cc-paypal "></i></label>
                                                     </div>
-                                                    
-
                                                 </div>
                                             </fieldset>
                                         </div>
@@ -174,13 +168,9 @@
                     </div>
                     <div class="card-footer">
                         <button type="submit" class="btn btn-md btn-primary float-right"><i
-                                class="fa fa-chevron-circle-right"></i>
-                            Next</button>
-
+                                class="fa fa-chevron-circle-right"></i> Next</button>
                     </div>
-
                 </div>
-
             </div>
             <!--/.row-->
         </div>
